--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DeviceSystem</string>
+    <string name="login">登录</string>
+    <string name="preview">预览</string>
+    <string name="ip">192.168.0.114</string>
+    <string name="pwd">HikCDJDNF</string>
 </resources>
