--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="preview">预览</string>
     <string name="ip">192.168.0.114</string>
     <string name="pwd">HikCDJDNF</string>
+    <string name="stop">停止</string>
+    <string name="ok">确定</string>
 </resources>
